--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -4,5 +4,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: controller
-  newName: turbonomic-companion-operator
+  newName: images.paas.redhat.com/paas-operators/turbonomic-companion-operator
   newTag: latest
