Using standard prometheus configs

--- a/config/prometheus/monitor.yaml
+++ b/config/prometheus/monitor.yaml
@@ -13,6 +13,7 @@ spec:
     - path: /metrics
       port: https # Ensure this is the name of the port that exposes HTTPS metrics
       scheme: https
+      interval: 60s
       bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
       tlsConfig:
         # TODO(user): The option insecureSkipVerify: true is not recommended for production since it disables
