--- a/config/default/metrics_service.yaml
+++ b/config/default/metrics_service.yaml
@@ -1,6 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
+  annotations:
+    service.alpha.openshift.io/serving-cert-secret-name: workload-resources-metrics-serving-cert
   labels:
     control-plane: controller-manager
     app.kubernetes.io/name: turbonomic-companion-operator
