--- a/config/prometheus/monitor.yaml
+++ b/config/prometheus/monitor.yaml
@@ -11,8 +11,9 @@ metadata:
 spec:
   endpoints:
     - path: /metrics
-      port: https # Ensure this is the name of the port that exposes HTTPS metrics
+      port: https-metrics # Ensure this is the name of the port that exposes HTTPS metrics
       scheme: https
+      interval: 60s
       bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
       tlsConfig:
         # TODO(user): The option insecureSkipVerify: true is not recommended for production since it disables
@@ -22,9 +23,9 @@ spec:
         # compromising the integrity and confidentiality of the information.
         # Please use the following options for secure configurations:
         # caFile: /etc/metrics-certs/ca.crt
-        # certFile: /etc/metrics-certs/tls.crt
-        # keyFile: /etc/metrics-certs/tls.key
-        insecureSkipVerify: true
+        caFile: /etc/prometheus/configmaps/serving-certs-ca-bundle/service-ca.crt
+        serverName: turbonomic-companion-operator-webhook-service.turbonomic-companion-operator-system.svc
+        insecureSkipVerify: false
   selector:
     matchLabels:
       control-plane: controller-manager
