Adding support for StatefulSets

--- a/config/webhook/manifests.yaml
+++ b/config/webhook/manifests.yaml
@@ -25,6 +25,7 @@ webhooks:
     - UPDATE
     resources:
     - deployments
+    - statefulsets
   - apiGroups:
     - apps.openshift.io
     apiVersions:
